# ghost

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/ghost-core/: Cargo.toml
crates/ghost-core/src/: error.rs  lib.rs
crates/ghost-core/src/capture/: mod.rs  screen.rs
crates/ghost-core/src/input/: hotkey.rs  keyboard.rs  mod.rs  mouse.rs
crates/ghost-core/src/process/: manager.rs  mod.rs
crates/ghost-core/src/uia/: element.rs  mod.rs  patterns.rs  tree.rs
crates/ghost-mcp/: Cargo.toml
crates/ghost-mcp/src/: main.rs
crates/ghost-session/: Cargo.toml
crates/ghost-session/src/: element.rs  error.rs  lib.rs  locator.rs  session.rs
crates/ghost-session/tests/: calculator.rs  notepad.rs
docs/plans/: 2026-04-16-ghost-desktop-automation-design.md  2026-04-16-ghost-implementation-plan.md
examples/: notepad_hello.rs
