[package]
name = "ghost-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ghost-mcp"
path = "src/main.rs"

[dependencies]
ghost-session = { path = "../ghost-session" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
